<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MicApp</string>
    <string name="app_subtitle">Real-time audio passthrough</string>
    <string name="label_input">Audio Input</string>
    <string name="label_output">Audio Output</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_ptt">Hold to Talk</string>
    <string name="mode_continuous">Continuous</string>
    <string name="mode_ptt">Push to Talk</string>
    <string name="status_active">● Active</string>
    <string name="status_stopped">● Stopped</string>
</resources>
